
plugins {
    id 'application'
}

java {
  toolchain {
    languageVersion = JavaLanguageVersion.of(21)
  }
}

repositories {
    mavenLocal()
    mavenCentral()
    maven {
        url = uri('https://pkgs.dev.azure.com/hmcts/Artifacts/_packaging/hmcts-lib/maven/v1')
    }
}

dependencies {
    testImplementation 'com.github.hmcts:fortify-client:1.4.9:all'
    testImplementation 'org.slf4j:slf4j-simple:2.0.17'
}

task fortifyScan(type: JavaExec)  {
    main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
    classpath += sourceSets.test.runtimeClasspath
    jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
}
